Update BLACK FRIDAY DATA ANALYSIS.ipynb

--- a/BLACK FRIDAY DATA ANALYSIS.ipynb
+++ b/BLACK FRIDAY DATA ANALYSIS.ipynb
@@ -15,7 +15,7 @@
     "# 🛒 Analysis of Black Friday Shopping Trends via Machine Learning\n",
     "In this project, we will try to explore different trends from the Black Friday shopping dataset. We will extract useful information that will answer questions such as: what gender shops more on Black Friday? Do the occupations of the people have any impact on sales? Which age group is the highest spender?\n",
     "\n",
-    "## 1. Problem defition\n",
+    "## 1. Problem definition\n",
     "\n",
     "> we will create a simple machine learning algorithm that predicts the amount of money that a person is likely to spend on Black Friday depending on features such as gender, age, and occupation.\n",
     "\n",
